# Social-Gaming-Platform

./: README.md
social-game-engine/: CMakeLists.txt
social-game-engine/InputTestFiles/: empty.game  loop_test.game  nested_loop.game
social-game-engine/lib/: CMakeLists.txt
social-game-engine/lib/engineTools/: CMakeLists.txt
social-game-engine/lib/engineTools/include/: Action.hpp  BaseEnvironment.hpp  GameInstance.hpp  GlobalVariables.hpp  event.hpp  game_event.hpp  input_event.hpp  timed_event.hpp
social-game-engine/lib/engineTools/src/: BaseEnvironment.cpp  GameInstance.cpp  GlobalVariables.cpp  game_event.cpp  input_event.cpp  timed_event.cpp
social-game-engine/lib/game/: CMakeLists.txt
social-game-engine/lib/game/CommonInclude/: Common.h
social-game-engine/lib/game/CommonSrc/: Common.cpp
social-game-engine/lib/game/Game/: CMakeLists.txt
social-game-engine/lib/game/Game/include/: Configuration.h  Constants.h  GameSpecification.h  PerAudience.h  PerPlayer.h  Rules.h  Value.h  VariableResolution.h  Variables.h  configuration_kinds.hpp
social-game-engine/lib/game/Game/src/: Configuration.cpp  Constants.cpp  GameSpecification.cpp  PerAudience.cpp  PerPlayer.cpp  Rules.cpp  VariableResolution.cpp  Variables.cpp
social-game-engine/lib/game/GameControls/: CMakeLists.txt
social-game-engine/lib/game/GameControls/include/: Assignment.h  BaseRule.h  Discard.h  Extend.h  For.h  InputChoice.h  Match.h  Message.h  ParallelFor.h  RuleContainer.h  Scores.h
social-game-engine/lib/game/GameControls/src/: Assignment.cpp  Discard.cpp  Extend.cpp  For.cpp  InputChoice.cpp  Match.cpp  Message.cpp  ParallelFor.cpp  Scores.cpp
social-game-engine/lib/game/GameSpecification/: CMakeLists.txt  game_specification.cpp
social-game-engine/lib/game/GameSpecification/include/: game_specification.hpp
social-game-engine/lib/networking/: CMakeLists.txt
social-game-engine/lib/networking/include/: GameMessage.h  GameServer.h  GameSession.h  GameSessionsManager.h  Player.h  Server.h
social-game-engine/lib/networking/src/: CMakeLists.txt  Client.cpp  GameMessage.cpp  GameServer.cpp  GameSession.cpp  GameSessionsManager.cpp  Server.cpp
social-game-engine/lib/networking/src/ClientInfo/: CMakeLists.txt
social-game-engine/lib/networking/src/ClientInfo/include/: ClientInfo.h
social-game-engine/lib/networking/src/ClientInfo/src/: ClientInfo.cpp
social-game-engine/lib/runtimeTools/: CMakeLists.txt
social-game-engine/lib/runtimeTools/include/: GameExecutor.h
social-game-engine/lib/runtimeTools/src/: GameExecutor.cpp
social-game-engine/lib/subscriber/include/: subscriber.hpp
social-game-engine/src/Game/: CMakeLists.txt  rock_paper_scissors.cpp
social-game-engine/src/Game/include/: rock_paper_scissors.h
social-game-engine/test/: CMakeLists.txt  ConfigurationKindTest.cpp  ConfigurationTest.cpp  ExecutorTests.cpp  GameSessionManagerTest.cpp  GameSessionsTest.cpp  PlayerTest.cpp  VariableResolutionTest.cpp
social-game-engine/test/gameTests/: bool.game  empty.game  id1.game  id2.game  id3.game  list.game  multipleEntries.game  num.game  string.game
social-game-engine/tools/: CMakeLists.txt
social-game-engine/tools/client-ftxui/: runassembly.py
social-game-engine/tools/client-ncurses/: CMakeLists.txt  ChatWindow.cpp  chatclient.cpp
social-game-engine/tools/engineToolsDriver/: CMakeLists.txt  engineDriver.cpp
social-game-engine/tools/parser/: CMakeLists.txt  demo.cpp  parserDriver.cpp
social-game-engine/tools/runtimeToolsDriver/: CMakeLists.txt  runtimeDriver.cpp
social-game-engine/tools/server/: CMakeLists.txt  chatserver.cpp
